revisi form html

--- a/repo-minggu4/formPPDB.html
+++ b/repo-minggu4/formPPDB.html
@@ -19,7 +19,7 @@
 	<div class="wrap">
 		<h1 class="header1" align="center">Formulir PPDB Jalur Zonasi Tahun 2021</h1>
 		<hr align="center" width="100%">
-		<form action="formPendaftaran.php" method="POST"></form>
+		<form action="formPendaftaran.php" method="POST">
 		<table style="width: 100%">
 			<tr>
 				<td><b>INFO PENDAFTARAN</b></td>
@@ -131,6 +131,7 @@
 				<td>: <input type="text" name="provinsiOT" id="provinsiOT" size="80"></td>
 			</tr>
 		</table>
+		</form>
 		<hr align="center" width="100%">
 		 <input type="checkbox" id="agreement" name="agreement" value="setuju">
   		<label for="vehicle1"> Seluruh data yang saya masukkan adalah valid dan sesuai apa adanya.</label><br>
