--- a/repo-minggu11/Praktikum 17/array-tambah-data.html
+++ b/repo-minggu11/Praktikum 17/array-tambah-data.html
@@ -7,10 +7,11 @@
 	<script type="text/javascript">
 		// membuat array
  		var products = ["Jarkom", "PBW", "PPB", "Orakom"];
+ 		document.write("<p>Array awal : " + products + "</p>");
  		// menambahkan isi array
  		products.push("Matriks");
  		// menampilkan array
- 		document.write(products);
+ 		document.write("<p>Array setelah push() : " + products + "</p>");
  	</script>
 </body>
 </html>
